[gd_scene load_steps=6 format=3 uid="uid://dirpegqs8dgvp"]

[ext_resource type="PackedScene" uid="uid://blh6nodlg5r3u" path="res://node/selector.tscn" id="1_8w6a8"]
[ext_resource type="Script" path="res://node/battle_visuals.gd" id="1_wm5vt"]
[ext_resource type="PackedScene" uid="uid://rjvdm85r7cfw" path="res://node/ui/info.tscn" id="2_kubpi"]
[ext_resource type="Material" uid="uid://boaku1t0g72kp" path="res://asset/vfx/dither.tres" id="3_pyv7u"]

[sub_resource type="Gradient" id="Gradient_grat1"]
offsets = PackedFloat32Array(0, 0.95, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0)

[node name="BattleVisuals" type="Node"]
script = ExtResource("1_wm5vt")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Margins" type="MarginContainer" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="Party" type="HBoxContainer" parent="UI/Margins"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_constants/separation = 1

[node name="Selector" parent="." instance=ExtResource("1_8w6a8")]
z_index = 1
controllable = false

[node name="Info" parent="Selector" instance=ExtResource("2_kubpi")]
visible = false
offset_left = 40.0
offset_top = -48.0
offset_right = 136.0
offset_bottom = 112.0

[node name="Path" type="Line2D" parent="."]
z_index = -1
material = ExtResource("3_pyv7u")
points = PackedVector2Array(-100, -1)
width = 8.0
default_color = Color(1, 1, 1, 0.501961)
gradient = SubResource("Gradient_grat1")

[node name="EndPhaseConfirm" type="ConfirmationDialog" parent="."]
title = "Would you like to exit?"
size = Vector2i(200, 80)
borderless = true
min_size = Vector2i(0, 0)
ok_button_text = "Yes"
dialog_text = "Are you satisfied with your actions?"
cancel_button_text = "No"

[connection signal="body_entered" from="Selector" to="." method="_on_selector_body_entered"]
[connection signal="emptied" from="Selector" to="." method="_on_selector_emptied"]
[connection signal="released" from="Selector" to="." method="_on_selector_released"]
[connection signal="squeezed" from="Selector" to="." method="_on_selector_squeezed"]
[connection signal="tile_changed" from="Selector" to="." method="_on_selector_tile_changed"]
